[gd_scene load_steps=2 format=3 uid="uid://dfetbghb52v06"]

[ext_resource type="Script" path="res://prog115a.gd" id="1_hqff7"]

[node name="prog115a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hqff7")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 91.0
offset_top = 17.0
offset_right = 1056.0
offset_bottom = 371.0

[node name="Calculate" type="Button" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 466.0
offset_right = 219.0
offset_bottom = 585.0
text = "Calculate"

[node name="Clear" type="Button" parent="."]
layout_mode = 0
offset_left = 247.0
offset_top = 470.0
offset_right = 402.0
offset_bottom = 589.0
text = "Clear"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 423.0
offset_top = 467.0
offset_right = 578.0
offset_bottom = 586.0
text = "Exit"

[connection signal="pressed" from="Calculate" to="." method="_on_calculate_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
